--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: setup python v3.8
-        uses: action/setup-python@v2
+        uses: actions/setup-python@v2
 
         with:
           python-version: 3.8
