--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 marshmallow==3.9.0
+marshmallow-sqlalchemy==0.24.0
+python-dotenv==0.15.0
 six==1.15.0
 SQLAlchemy==1.3.20
 Werkzeug==1.0.1
