--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - name: install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ requirements.txt ]; then pip install -r requirements.txt; fi
+          if [ src/requirements.txt ]; then pip install -r src/requirements.txt; fi
         
       - name: unittest
         run: |
