--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,7 @@ jobs:
           if [ src/requirements.txt ]; then pip install -r src/requirements.txt; fi
           
       - name: setup environment variables for psycopg2
+        run: echo $DB_URI
         env:
           DB_URI: postgresql+psycopg2://postgres:postgres@postgres:5432/postgres
         
