--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,11 @@ jobs:
     services:
       postgres:
         image: postgres
+        expose:
+          - "5432"
         env:
           POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: postgres
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -39,4 +42,4 @@ jobs:
           echo $DB_URI
           python -m unittest discover src/
         env:
-          DB_URI: postgresql+psycopg2://postgres:postgres@postgres:5432/postgres
+          DB_URI: postgresql+psycopg2://postgres:postgres@localhost:5432/postgres
