--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,9 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 2
+        ports:
+          # Maps tcp port 5432 on service to host
+          - 5432:5432
     
     steps:
       - name: checkout
