--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,3 +44,4 @@ jobs:
           python -m unittest discover src/
         env:
           DB_URI: postgresql+psycopg2://postgres:postgres@localhost:5432/postgres
+          SECRET_KEY: random
