--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,4 +1,6 @@
 bcrypt==3.2.0
+boto3==1.16.25
+botocore==1.19.25
 cffi==1.14.3
 click==7.1.2
 Flask==1.1.2
@@ -8,13 +10,17 @@ flask-marshmallow==0.14.0
 Flask-SQLAlchemy==2.4.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
+jmespath==0.10.0
 MarkupSafe==1.1.1
 marshmallow==3.9.0
 marshmallow-sqlalchemy==0.24.0
 psycopg2==2.8.6
 pycparser==2.20
 PyJWT==1.7.1
+python-dateutil==2.8.1
 python-dotenv==0.15.0
+s3transfer==0.3.3
 six==1.15.0
 SQLAlchemy==1.3.20
+urllib3==1.26.2
 Werkzeug==1.0.1
