--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,3 +43,4 @@ jobs:
         env:
           DB_URI: postgresql+psycopg2://postgres:postgres@localhost:5432/postgres
           SECRET_KEY: random
+          AWS_S3_BUCKET: 1
