--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.4.3
 bcrypt==3.2.0
 boto3==1.16.25
 botocore==1.19.25
@@ -7,10 +8,12 @@ Flask==1.1.2
 Flask-Bcrypt==0.7.1
 Flask-JWT-Extended==3.25.0
 flask-marshmallow==0.14.0
+Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jmespath==0.10.0
+Mako==1.1.3
 MarkupSafe==1.1.1
 marshmallow==3.9.0
 marshmallow-sqlalchemy==0.24.0
@@ -19,6 +22,7 @@ pycparser==2.20
 PyJWT==1.7.1
 python-dateutil==2.8.1
 python-dotenv==0.15.0
+python-editor==1.0.4
 s3transfer==0.3.3
 six==1.15.0
 SQLAlchemy==1.3.20
