--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -6,10 +6,12 @@ cffi==1.14.3
 click==7.1.2
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
+Flask-Gunicorn==0.1.1
 Flask-JWT-Extended==3.25.0
 flask-marshmallow==0.14.0
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.4
+gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jmespath==0.10.0
@@ -17,7 +19,8 @@ Mako==1.1.3
 MarkupSafe==1.1.1
 marshmallow==3.9.0
 marshmallow-sqlalchemy==0.24.0
-psycopg2==2.8.6
+pkg-resources==0.0.0
+psycopg2-binary==2.8.6
 pycparser==2.20
 PyJWT==1.7.1
 python-dateutil==2.8.1
